# gxPlayer

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  build.bat  dev.bat  index.html  package-lock.json  package.json  sandbox.html  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/gx-audio/: Cargo.toml
crates/gx-audio/src/: engine.rs  lib.rs  mmcss.rs
crates/gx-cache/: Cargo.toml
crates/gx-cache/src/: lib.rs
crates/gx-contracts/: Cargo.toml
crates/gx-contracts/src/: lib.rs
crates/gx-dsp/: Cargo.toml
crates/gx-dsp/src/: kemar.rs  lib.rs  spatial.rs
crates/gx-library/: Cargo.toml
crates/gx-library/src/: lib.rs
crates/gx-metadata/: Cargo.toml
crates/gx-metadata/src/: lib.rs
crates/gx-source/: Cargo.toml
crates/gx-source/src/: lib.rs  network_policy.rs  safe_http.rs
crates/gx-streaming/: Cargo.toml
crates/gx-streaming/src/: lib.rs
docs/: performance-exploration-2026-07-13.md  phase-0-checklist.md  phase-1-checklist.md  phase-1-dsp-checklist.md  phase-2-lx-runtime-checklist.md  phase-3-metadata-checklist.md  phase-4-blind-responses.json  phase-4-spatial-audio-checklist.md  phase-5-ui-library-checklist.md  project-review-2026-07-12.md  releasing.md
docs/architecture/: data-contracts.md  lx-contract.md  player-state-machine.md  source-fallback.md  thread-model.md  windows-media-session.md
pocs/engine-smoke/: Cargo.toml
pocs/engine-smoke/src/: main.rs
pocs/http-stream/: Cargo.toml
pocs/http-stream/src/: main.rs
pocs/local-playback/: Cargo.toml
pocs/local-playback/src/: main.rs
pocs/metadata-smoke/: Cargo.toml
pocs/metadata-smoke/src/: main.rs
pocs/spatial-lab/: Cargo.toml
pocs/spatial-lab/src/: main.rs
scripts/: check-version.mjs
src/: App.css  App.test.tsx  App.tsx  sandbox.test.ts  sandbox.ts  sourceRealm.worker.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  lx-sandbox.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_preferences.rs  artwork.rs  backup_commands.rs  cache_commands.rs  diagnostic_log.rs  lib.rs  library_commands.rs  main.rs  media_session.rs  metadata_commands.rs  network_settings.rs  preview_cache.rs  product_commands.rs  source_commands.rs  source_runtime.rs  taskbar_toolbar.rs  transport.rs  window_state.rs  windows_identity.rs
src/components/: ActionDialog.css  ActionDialog.test.tsx  ActionDialog.tsx  AppErrorBoundary.css  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  Dialog.test.tsx  Dialog.tsx  OnboardingModal.tsx  QueuePanel.css  QueuePanel.test.tsx  QueuePanel.tsx  ResolveBanner.test.tsx  ResolveBanner.tsx  SourceGuide.tsx  TextPlaylistImportDialog.css  TextPlaylistImportDialog.test.tsx  TextPlaylistImportDialog.tsx
src/features/player/: DspPresetControls.css  DspPresetControls.test.tsx  DspPresetControls.tsx  LyricsPanel.tsx
src/hooks/: useArtwork.test.tsx  useArtwork.ts  useBackupRestore.test.tsx  useBackupRestore.ts  useCatalogSearch.test.tsx  useCatalogSearch.ts  useEngineSnapshot.test.tsx  useEngineSnapshot.ts  useLiveVolume.test.tsx  useLiveVolume.ts  useNarrowLayout.test.tsx  useNarrowLayout.ts  useSystemProxySettings.test.tsx  useSystemProxySettings.ts  useTextPlaylistImport.test.tsx  useTextPlaylistImport.ts  useWindowActivity.test.ts  useWindowActivity.ts  useWindowPreferences.test.tsx  useWindowPreferences.ts
src/lib/: artistNames.test.ts  artistNames.ts  backupRestore.test.ts  backupRestore.ts  diagnosticDisplay.test.ts  diagnosticDisplay.ts  dspPresets.test.ts  dspPresets.ts  historyGrouping.test.ts  historyGrouping.ts  localQueueAvailability.test.ts  localQueueAvailability.ts  playlistLogic.test.ts  playlistLogic.ts  playlistPersistence.test.ts  playlistPersistence.ts  resolveErrors.ts  sourceBridgeLimit.test.ts  sourceBridgeLimit.ts  tauriClient.ts  tauriRuntime.test.ts  tauriRuntime.ts  textPlaylistImport.test.ts  textPlaylistImport.ts  themePreference.test.ts  themePreference.ts  transport.test.ts  transport.ts  uiState.test.ts  uiState.ts
