[workspace]
resolver = "2"
members = [
    "crates/gx-contracts",
    "crates/gx-audio",
    "crates/gx-streaming",
    "pocs/local-playback",
    "pocs/http-stream",
    "pocs/engine-smoke",
    "pocs/metadata-smoke",
    "pocs/spatial-lab",
    "crates/gx-dsp",
    "crates/gx-source",
    "crates/gx-metadata",
    "crates/gx-library",
    "crates/gx-cache",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["GXPlayer contributors"]
repository = ""

[workspace.dependencies]
anyhow = "1.0.103"
cpal = "0.15.3"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
regex = "=1.13.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
ringbuf = "0.4.8"
rubato = "0.16.2"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
symphonia = { version = "0.5.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "vorbis", "wav"] }
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
