[package]
name = "gxplayer"
version.workspace = true
description = "A Tauri App"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gxplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
gx-contracts = { path = "../crates/gx-contracts" }
gx-audio = { path = "../crates/gx-audio" }
gx-dsp = { path = "../crates/gx-dsp" }
gx-source = { path = "../crates/gx-source" }
reqwest.workspace = true
url.workspace = true
