[package]
name = "gx-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
gx-contracts = { path = "../gx-contracts" }
gx-cache = { path = "../gx-cache" }
gx-dsp = { path = "../gx-dsp" }
gx-streaming = { path = "../gx-streaming" }
ringbuf.workspace = true
rubato.workspace = true
serde.workspace = true
symphonia.workspace = true

[dev-dependencies]
gx-streaming = { path = "../gx-streaming", features = ["test-private-network"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading"] }
