[package]
name = "gx-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gx-contracts = { path = "../gx-contracts" }
gx-source = { path = "../gx-source" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
