[package]
name = "gx-source"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
gx-contracts = { path = "../gx-contracts" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"
