[package]
name = "gx-streaming"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
gx-contracts = { path = "../gx-contracts" }
reqwest.workspace = true
symphonia.workspace = true
