[package]
name = "engine-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
gx-audio = { path = "../../crates/gx-audio" }
gx-contracts = { path = "../../crates/gx-contracts" }
gx-dsp = { path = "../../crates/gx-dsp" }
