[package]
name = "http-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
gx-contracts = { path = "../../crates/gx-contracts" }
gx-streaming = { path = "../../crates/gx-streaming", features = ["test-private-network"] }
